; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/mouse/extr_cyapa_gen5.c_cyapa_gen5_execute_panel_scan.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/mouse/extr_cyapa_gen5.c_cyapa_gen5_execute_panel_scan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cyapa = type { i32 }
%struct.pip_app_cmd_head = type { i32, i32, i32, i32 }

@PIP_OUTPUT_REPORT_ADDR = common dso_local global i32 0, align 4
@PIP_APP_CMD_REPORT_ID = common dso_local global i32 0, align 4
@GEN5_CMD_EXECUTE_PANEL_SCAN = common dso_local global i32 0, align 4
@cyapa_sort_tsg_pip_app_resp_data = common dso_local global i32 0, align 4
@EAGAIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cyapa*)* @cyapa_gen5_execute_panel_scan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cyapa_gen5_execute_panel_scan(%struct.cyapa* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cyapa*, align 8
  %4 = alloca %struct.pip_app_cmd_head*, align 8
  %5 = alloca [7 x i32], align 16
  %6 = alloca [6 x i32], align 16
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.cyapa* %0, %struct.cyapa** %3, align 8
  %9 = getelementptr inbounds [7 x i32], [7 x i32]* %5, i64 0, i64 0
  %10 = call i32 @memset(i32* %9, i32 0, i32 28)
  %11 = getelementptr inbounds [7 x i32], [7 x i32]* %5, i64 0, i64 0
  %12 = bitcast i32* %11 to %struct.pip_app_cmd_head*
  store %struct.pip_app_cmd_head* %12, %struct.pip_app_cmd_head** %4, align 8
  %13 = load i32, i32* @PIP_OUTPUT_REPORT_ADDR, align 4
  %14 = load %struct.pip_app_cmd_head*, %struct.pip_app_cmd_head** %4, align 8
  %15 = getelementptr inbounds %struct.pip_app_cmd_head, %struct.pip_app_cmd_head* %14, i32 0, i32 3
  %16 = call i32 @put_unaligned_le16(i32 %13, i32* %15)
  %17 = load %struct.pip_app_cmd_head*, %struct.pip_app_cmd_head** %4, align 8
  %18 = getelementptr inbounds %struct.pip_app_cmd_head, %struct.pip_app_cmd_head* %17, i32 0, i32 2
  %19 = call i32 @put_unaligned_le16(i32 26, i32* %18)
  %20 = load i32, i32* @PIP_APP_CMD_REPORT_ID, align 4
  %21 = load %struct.pip_app_cmd_head*, %struct.pip_app_cmd_head** %4, align 8
  %22 = getelementptr inbounds %struct.pip_app_cmd_head, %struct.pip_app_cmd_head* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 4
  %23 = load i32, i32* @GEN5_CMD_EXECUTE_PANEL_SCAN, align 4
  %24 = load %struct.pip_app_cmd_head*, %struct.pip_app_cmd_head** %4, align 8
  %25 = getelementptr inbounds %struct.pip_app_cmd_head, %struct.pip_app_cmd_head* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  store i32 24, i32* %7, align 4
  %26 = load %struct.cyapa*, %struct.cyapa** %3, align 8
  %27 = getelementptr inbounds [7 x i32], [7 x i32]* %5, i64 0, i64 0
  %28 = getelementptr inbounds [6 x i32], [6 x i32]* %6, i64 0, i64 0
  %29 = load i32, i32* @cyapa_sort_tsg_pip_app_resp_data, align 4
  %30 = call i32 @cyapa_i2c_pip_cmd_irq_sync(%struct.cyapa* %26, i32* %27, i32 28, i32* %28, i32* %7, i32 500, i32 %29, i32 1)
  store i32 %30, i32* %8, align 4
  %31 = load i32, i32* %8, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %46, label %33

33:                                               ; preds = %1
  %34 = load i32, i32* %7, align 4
  %35 = sext i32 %34 to i64
  %36 = icmp ne i64 %35, 24
  br i1 %36, label %46, label %37

37:                                               ; preds = %33
  %38 = getelementptr inbounds [6 x i32], [6 x i32]* %6, i64 0, i64 0
  %39 = load i32, i32* @GEN5_CMD_EXECUTE_PANEL_SCAN, align 4
  %40 = call i32 @VALID_CMD_RESP_HEADER(i32* %38, i32 %39)
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %46

42:                                               ; preds = %37
  %43 = getelementptr inbounds [6 x i32], [6 x i32]* %6, i64 0, i64 0
  %44 = call i32 @PIP_CMD_COMPLETE_SUCCESS(i32* %43)
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %56, label %46

46:                                               ; preds = %42, %37, %33, %1
  %47 = load i32, i32* %8, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %51

49:                                               ; preds = %46
  %50 = load i32, i32* %8, align 4
  br label %54

51:                                               ; preds = %46
  %52 = load i32, i32* @EAGAIN, align 4
  %53 = sub nsw i32 0, %52
  br label %54

54:                                               ; preds = %51, %49
  %55 = phi i32 [ %50, %49 ], [ %53, %51 ]
  store i32 %55, i32* %2, align 4
  br label %57

56:                                               ; preds = %42
  store i32 0, i32* %2, align 4
  br label %57

57:                                               ; preds = %56, %54
  %58 = load i32, i32* %2, align 4
  ret i32 %58
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @put_unaligned_le16(i32, i32*) #1

declare dso_local i32 @cyapa_i2c_pip_cmd_irq_sync(%struct.cyapa*, i32*, i32, i32*, i32*, i32, i32, i32) #1

declare dso_local i32 @VALID_CMD_RESP_HEADER(i32*, i32) #1

declare dso_local i32 @PIP_CMD_COMPLETE_SUCCESS(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
